Make warehouse URL construction consistent in tests